<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="talkback_title" translatable="false">TalkBack</string>
    <string name="talkback_service_description">When TalkBack is on, your device provides spoken feedback to help blind and low-vision users. For example, it describes what you touch, select, and activate.\n\nIf you have turned TalkBack on accidentally, turn it off by tapping the switch until the green outline is around it, then double-tapping it. Do the same interaction for the resulting confirmation dialog.</string>
    <string name="talkback_on">TalkBack on</string>
    <string name="talkback_suspended">TalkBack suspended</string>
    <string name="talkback_resumed">TalkBack resumed</string>
    <string name="talkback_disabled">TalkBack has been turned off.</string>
    <string name="talkback_preferences_title">TalkBack Settings</string>
    <string name="tts_preferences_title">Text to speech Settings</string>
    <string name="talkback_preferences_subtitle">Version <xliff:g id="version_name">%1$s</xliff:g></string>
    <string name="label_manager_summary_title">Manage Custom Labels</string>
    <string name="label_manager_package_title">Manage Labels for <xliff:g id="applicationLabel" example="Gmail">%1$s</xliff:g></string>
    <string name="label_manager_no_packages_message">There are currently no custom labels. You can create one by navigating to an unlabeled image and then adding a label from the Local Context Menu.</string>
    <string name="label_manager_timestamp_text">Last modified <xliff:g id="timestamp" example="1/1/11 11:11 AM">%1$s</xliff:g></string>
    <string name="search_dialog_label">Search: <xliff:g id="search_query">%1$s</xliff:g></string>
    <string name="search_mode_open">Search mode opened.</string>
    <string name="search_mode_cancel">Search canceled.</string>
    <string name="search_mode_finish">Search finished.</string>
    <string name="search_mode_hint_start">Search mode.</string>
    <string name="search_mode_hint_no_query">No query has been entered.</string>
    <string name="search_mode_hint_query">Current query: <xliff:g id="search_query">%1$s</xliff:g>.</string>
    <string name="search_mode_hint_no_selection">No selected item.</string>
    <string name="search_mode_hint_selection">Current selection: <xliff:g id="selected_node">%1$s</xliff:g>.</string>
    <string name="notification_type_beginning_of_field">Beginning of field</string>
    <string name="notification_type_end_of_field">End of field</string>
    <string name="notification_type_selection_mode_on">Selection mode on</string>
    <string name="notification_type_selection_mode_off">Selection mode off</string>
    <string name="notification_type_selection_cleared">Selection cleared</string>
    <string name="notification_type_missed_call">Missed call</string>
    <string name="notification_type_status_mute">Mute</string>
    <string name="notification_type_status_chat">Chat</string>
    <string name="notification_type_status_error">Error</string>
    <string name="notification_type_status_more">More</string>
    <string name="notification_type_status_sdcard">SD card</string>
    <string name="notification_type_status_sdcard_usb">SD card USB</string>
    <string name="notification_status_sync">Sync</string>
    <string name="notification_type_status_sync_noanim">Sync</string>
    <string name="notification_type_status_voicemail">Voicemail</string>
    <string name="notification_type_status_started">Started</string>
    <string name="notification_type_status_stopped">Stopped</string>
    <string name="template_current_tts_engine">Using <xliff:g id="engine_name">%1$s</xliff:g></string>
    <string name="template_menu"><xliff:g id="title" example="Change granularity">%1$s</xliff:g> menu</string>
    <string name="template_alert_dialog_template">Alert <xliff:g id="message">%1$s</xliff:g></string>
    <string name="template_drawer_opened"><xliff:g id="title">%1$s</xliff:g> menu</string>
    <string name="template_text_replaced"><xliff:g id="new_text">%1$s</xliff:g> replaced <xliff:g id="old_text">%2$s</xliff:g></string>
    <string name="template_text_removed"><xliff:g id="text">%1$s</xliff:g> deleted</string>
    <string name="template_text_copied">copied, <xliff:g id="text">%1$s</xliff:g></string>
    <string name="template_text_cut">cut, <xliff:g id="text">%1$s</xliff:g></string>
    <string name="template_text_pasted">pasted, <xliff:g id="text">%1$s</xliff:g></string>
    <string name="template_text_selected"><xliff:g id="selected_text">%1$s</xliff:g>, selected</string>
    <string name="template_announce_selected_text">Selected text: <xliff:g id="selected_text">%1$s</xliff:g></string>
    <string name="template_no_text_selected">No text selected</string>
    <string name="template_text_unselected"><xliff:g id="unselected_text">%1$s</xliff:g>, unselected</string>
    <string name="template_text_error">Invalid input <xliff:g id="error_msg" example="Enter a valid number">%1$s</xliff:g></string>
    <string name="template_replaced_characters"><xliff:g id="old_text_length">%1$s</xliff:g> characters replaced with <xliff:g id="new_text_length">%2$s</xliff:g> characters</string>
    <string name="template_labeled_item"><xliff:g id="item" example="check box">%1$s</xliff:g> for <xliff:g id="label" example="Wi-Fi">%2$s</xliff:g></string>
    <string name="template_long_clicked">Long-pressed <xliff:g id="title" example="Cancel button">%1$s</xliff:g></string>
    <string name="template_percent"><xliff:g id="percentage">%1$s</xliff:g> percent.</string>
    <string name="template_charging">Charging <xliff:g id="changing_status">%1$s</xliff:g> Battery level <xliff:g id="battery_level">%2$s</xliff:g> percent.</string>
    <plurals name="template_containers">
        <item quantity="one"><xliff:g id="type" example="List">%1$s</xliff:g> showing <xliff:g id="count" example="1">%2$d</xliff:g> item.</item>
        <item quantity="other"><xliff:g id="type" example="List">%1$s</xliff:g> showing <xliff:g id="count" example="3">%2$d</xliff:g> items.</item>
    </plurals>
    <string name="value_gridview">Grid</string>
    <string name="value_listview">List</string>
    <string name="value_tabwidget">Tab bar</string>
    <string name="value_spinner">Drop down list</string>
    <string name="value_checkbox">Check box</string>
    <string name="value_radio_button">Radio button</string>
    <string name="value_button">Button</string>
    <string name="value_seek_bar">Seek control</string>
    <string name="value_switch">Switch</string>
    <string name="value_edit_box">Edit box</string>
    <string name="value_edit_box_editing">Editing</string>
    <string name="value_image">Image</string>
    <string name="value_unlabelled">Unlabelled</string>
    <string name="value_pager">Multi-page view</string>
    <string name="value_pager_page">Page</string>
    <string name="template_scroll_from_to_count">Showing items <xliff:g id="from_index">%1$d</xliff:g> to <xliff:g id="to_index">%2$d</xliff:g> of <xliff:g id="total_count">%3$d</xliff:g>.</string>
    <string name="template_scroll_from_count">Showing item <xliff:g id="from_index">%1$d</xliff:g> of <xliff:g id="total_count">%2$d</xliff:g>.</string>
    <string name="template_viewpager_index_count">Page <xliff:g id="page_index">%1$d</xliff:g> of <xliff:g id="total_count">%2$d</xliff:g></string>
    <string name="template_viewpager_index_count_short"><xliff:g id="page_index">%1$d</xliff:g> of <xliff:g id="total_count">%2$d</xliff:g></string>
    <string name="template_password_selected">Characters <xliff:g id="from_index">%1$d</xliff:g> to <xliff:g id="to_index">%2$d</xliff:g></string>
    <string name="template_password_traversed">Character <xliff:g id="index">%1$d</xliff:g></string>
    <string name="template_capital_letter">capital <xliff:g id="uppercase_character">%1$s</xliff:g></string>
    <string name="value_password">password</string>
    <string name="value_sliding_drawer_opened">Sliding drawer opened</string>
    <string name="value_notification_shade_opened">Shade opened</string>
    <string name="value_options_menu_open">Options.</string>
    <string name="value_text_cleared">Cleared text</string>
    <string name="value_text_max_length">Maximum length reached</string>
    <string name="value_text_removed">deleted</string>
    <string name="value_selected">selected</string>
    <string name="value_checked">checked</string>
    <string name="value_not_checked">not checked</string>
    <string name="value_on">on</string>
    <string name="value_off">off</string>
    <string name="value_expanded">expanded</string>
    <string name="value_collapsed">collapsed</string>
    <string name="value_disabled">disabled</string>
    <string name="value_double_tap">Double-tap</string>
    <string name="value_single_tap">Tap</string>
    <string name="value_press_select">Press select</string>
    <string name="template_hint_clickable"><xliff:g id="action" example="Tap">%1$s</xliff:g> to activate.</string>
    <string name="template_hint_clickable_keyboard">Press <xliff:g id="keyCombo" example="Alt+Enter">%1$s</xliff:g> to activate.</string>
    <string name="template_hint_long_clickable"><xliff:g id="action" example="Tap">%1$s</xliff:g> and hold to long press.</string>
    <string name="template_hint_long_clickable_keyboard">Press <xliff:g id="keyCombo" example="Alt+Shift+Enter">%1$s</xliff:g> to long press.</string>
    <string name="template_hint_checkable"><xliff:g id="action" example="Tap">%1$s</xliff:g> to toggle.</string>
    <string name="template_hint_checkable_keyboard">Press <xliff:g id="keyCombo" example="Alt+Enter">%1$s</xliff:g> to toggle.</string>
    <string name="template_hint_edit_text"><xliff:g id="action" example="Tap">%1$s</xliff:g> to enter text.</string>
    <string name="template_hint_edit_text_keyboard">Press <xliff:g id="keyCombo" example="Alt+Enter">%1$s</xliff:g> to enter text.</string>
    <string name="template_hint_spinner"><xliff:g id="action" example="Tap">%1$s</xliff:g> to change.</string>
    <string name="template_hint_spinner_keyboard">Press <xliff:g id="keyCombo" example="Alt+Enter">%1$s</xliff:g> to change.</string>
    <string name="template_hint_pager">Swipe with two fingers to switch pages.</string>
    <string name="template_hint_pager_single_page">No additional pages available.</string>
    <string name="keycombo_assign_dialog_message">Keyboard shortcut is</string>
    <string name="keycombo_assign_dialog_instruction">Press key combination to set new shortcut. It must contain at least ALT or Control key.</string>
    <string name="keycombo_assign_dialog_clear">Clear shortcut</string>
    <string name="screen_dimming_exit_instruction_line1">TalkBack accessibility service has dimmed the screen.</string>
    <string name="screen_dimming_exit_instruction_line2">Undo by pressing Volume Up and Volume Down keys together three times quickly.</string>
    <string name="screen_dimming_exit_instruction_line3">Screen dim can be controlled from TalkBack Settings.</string>
    <string name="shortcut_repeat_last_utterance">Repeat last utterance</string>
    <string name="shortcut_spell_last_utterance">Spell last utterance</string>
    <string name="shortcut_pause_feedback">Pause feedback</string>
    <string name="shortcut_read_from_top">Read from top</string>
    <string name="shortcut_read_from_current">Read from next item</string>
    <string name="title_summary">Quick navigation</string>
    <string name="dialog_message_suspend_talkback">Are you sure? Your device will not provide feedback and Explore by Touch will be disabled. You can resume TalkBack from notifications, by returning to the lockscreen, or through the volume key shortcut.</string>
    <string name="message_resume_manual">You can resume TalkBack from the notifications shade.</string>
    <string name="show_suspend_warning_label">Always show this warning</string>
</resources>